kubernetes/inference-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-deployment
  labels:
    app: inference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      labels:
        app: inference
    spec:
      containers:
        - name: inference
          image: app-recommender:latest
        restartPolicy: Always
