kubernetes/inference-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inference-service
  labels:
    app: inference
spec:
  type: LoadBalancer  
  selector:
    app: inference
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
